# powercrtl

./: meson.build
10_dbus_fan/: meson.build
10_dbus_fan/interfaceAdded_yaml_object_interface_fan_ctrl/: main_server.cpp  meson.build
10_dbus_fan/interfaceAdded_yaml_object_interface_fan_ctrl/xyz/openbmc_project/: fanctrl.interface.yaml
10_dbus_fan/interfaceAdded_yaml_object_interface_fan_ctrl/xyz/openbmc_project/fanctrl/: meson.build
10_dbus_powerctrl/: meson.build
10_dbus_powerctrl/interfaceAdded_yaml_object_interface_power_ctrl/: main_server.cpp  meson.build
10_dbus_powerctrl/interfaceAdded_yaml_object_interface_power_ctrl/xyz/openbmc_project/: powerctrl.interface.yaml
10_dbus_powerctrl/interfaceAdded_yaml_object_interface_power_ctrl/xyz/openbmc_project/powerctrl/: meson.build
service_files/: host_power_state_check.service  host_power_state_check.sh  meson.build  xyz.openbmc_project.fan_ctrl.service  xyz.openbmc_project.power_ctrl.service
